--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -3192,6 +3192,16 @@ package @PACKAGE@ {
                 helpkey *
             }
 
+            parameter jsatiles {
+                type _LOGICAL
+                access READ
+                vpath DEFAULT
+                ppath CURRENT, DEFAULT
+                prompt {Create the map as a set of JSA tiles?}
+                default FALSE
+                helpkey *
+            }
+
             parameter lbnd {
                 size *
                 type _INTEGER
