--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -3202,6 +3202,14 @@ package @PACKAGE@ {
                 helpkey *
             }
 
+            parameter jsatilelist {
+                size *
+                type _INTEGER
+                access WRITE
+                vpath INTERNAL
+                helpkey *
+            }
+
             parameter lbnd {
                 size *
                 type _INTEGER
