smurf: Allow makecube to create JSA tiles
New parameter JSATILES can be set TRUE to cause the output cube to be
split up into JSA spatial tiles. The indices of the tiles are written to
new output parameter JSATILELIST.

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -2789,6 +2789,24 @@ package @PACKAGE@ {
                 helpkey *
             }
 
+            parameter jsatiles {
+                type _LOGICAL
+                access READ
+                vpath DEFAULT
+                ppath CURRENT, DEFAULT
+                prompt {Create the cube as a set of JSA tiles?}
+                default FALSE
+                helpkey *
+            }
+
+            parameter jsatilelist {
+                size *
+                type _INTEGER
+                access WRITE
+                vpath INTERNAL
+                helpkey *
+            }
+
             parameter lbnd {
                 size *
                 type _INTEGER
