cupid: Allow CADC-style provenance to be stored in the catalogue
Controlled by new parameter CADCPROV.

--- a/applications/cupid/cupid.ifd.in
+++ b/applications/cupid/cupid.ifd.in
@@ -288,6 +288,16 @@ package cupid {
             helpkey *
           }
 
+         parameter cadcprov {
+            type _LOGICAL
+            access READ
+            vpath DEFAULT
+            ppath CURRENT,DEFAULT
+            prompt {Add CADC-style provenance to outptu catalogue?}
+            default FALSE
+            helpkey *
+          }
+
          parameter config {
             type LITERAL
             ppath CURRENT DEFAULT
