kaplibs: fts1_scadc is an ADAM routine

--- a/libraries/kaplibs/fts/Makefile.am
+++ b/libraries/kaplibs/fts/Makefile.am
@@ -29,7 +29,7 @@ fts1_lokey.f fts1_mandh.f fts1_ndfcm.f fts1_pcadc.f \
 fts1_phead.f \
 fts1_prval.f fts1_ptkey.f fts1_qtype.f fts1_rdata.f \
 fts1_rfmod.f fts1_rgrda.f fts1_rootn.f \
-fts1_scadc.f fts1_scofb.f fts1_skip.f \
+fts1_scofb.f fts1_skip.f \
 fts1_ukeyc.f fts1_vhead.f fts1_wcsax.f \
 fts1_wcsdf.f fts1_wcsim.f fts1_wcsut.f fts1_wkeyc.f
 
@@ -41,6 +41,7 @@ ADAM_F_ROUTINES = \
 fts1_crndf.f \
 fts1_ndf.f \
 fts1_rstab.f \
+fts1_scadc.f \
 fts1_sctab.f \
 fts1_sdscf.f
 
