smurf: New command jsasplit
Splits a map or cube into JSA tiles. Currently, it assumes the input NDF
is gridded on the JSA all-sky pixel grid. But it should be changed so that
it will automatically resample the input NDF if it is not on the JSA
all-sky pixel grid.

--- a/applications/smurf/libsmurf/Makefile.am
+++ b/applications/smurf/libsmurf/Makefile.am
@@ -36,6 +36,7 @@ smurf_fts2_transcorr.c \
 smurf_gsd2acsis.c \
 smurf_gsdshow.c \
 smurf_impaztec.c \
+smurf_jsasplit.c \
 smurf_makecube.c \
 smurf_makemap.c \
 smurf_rawpress.c \
