--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -2636,6 +2636,73 @@ package @PACKAGE@ {
 
         }
 
+        action jsasplit {
+            helplib {$SMURF_HELP}
+
+            parameter in {
+                position 1
+                type NDF
+                access READ
+                vpath {PROMPT }
+                association <-GLOBAL.DATA_ARRAY
+                prompt {Input map or cube}
+                helpkey *
+            }
+
+            parameter instrument {
+                type LITERAL
+                access READ
+                ppath DYNAMIC CURRENT DEFAULT
+                vpath DYNAMIC PROMPT
+                prompt {JCMT instrument}
+                default {SCUBA-2(850)}
+                helpkey *
+            }
+
+            parameter jsatilelist {
+                size *
+                type _INTEGER
+                access WRITE
+                vpath INTERNAL
+                helpkey *
+            }
+
+            parameter ntile {
+                type _INTEGER
+                access WRITE
+                vpath DEFAULT
+                default 0
+                helpkey *
+            }
+
+            parameter out {
+                position 2
+                type LITERAL
+                access WRITE
+                prompt {Basename for output NDFs}
+                helpkey *
+            }
+
+            parameter outfiles {
+                type LITERAL
+                prompt {Text file in which to put the output NDF names}
+                default !
+                vpath DEFAULT
+                ppath CURRENT DEFAULT
+                helpkey *
+            }
+
+            parameter trim {
+                type _LOGICAL
+                vpath DEFAULT
+                ppath CURRENT
+                prompt {Trim bad border from output NDFs?}
+                default FALSE
+                helpkey *
+            }
+
+        }
+
         action makecube {
 
             helplib {$SMURF_HELP}
