smurf: Rename tile commands to start with "JSA"
This is so that all JSA-related smurf commands start with "JSA" to
indicate their purpose.

--- a/applications/smurf/Makefile.am
+++ b/applications/smurf/Makefile.am
@@ -53,6 +53,8 @@ fts2transcorr \
 gsd2acsis \
 gsdshow \
 impaztec \
+jsatileinfo \
+jsatilelist \
 jsasplit \
 makecube \
 makemap \
@@ -76,8 +78,6 @@ smurfcopy \
 smurfhelp \
 stackframes \
 starecalc \
-tileinfo \
-tilelist \
 timesort \
 unmakecube \
 unmakemap
