--- a/applications/smurf/libsmurf/Makefile.am
+++ b/applications/smurf/libsmurf/Makefile.am
@@ -37,6 +37,8 @@ smurf_gsd2acsis.c \
 smurf_gsdshow.c \
 smurf_impaztec.c \
 smurf_jsasplit.c \
+smurf_jsatileinfo.c \
+smurf_jsatilelist.c \
 smurf_makecube.c \
 smurf_makemap.c \
 smurf_rawpress.c \
@@ -59,8 +61,6 @@ smurf_smurfcopy.c \
 smurf_smurfhelp.c \
 smurf_stackframes.c \
 smurf_starecalc.c \
-smurf_tileinfo.c \
-smurf_tilelist.c \
 smurf_timesort.c \
 smurf_unmakecube.c \
 smurf_unmakemap.c
