--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -2703,6 +2703,207 @@ package @PACKAGE@ {
 
         }
 
+        action jsatileinfo {
+            helplib {$SMURF_HELP}
+
+            parameter allsky {
+                type NDF
+                access WRITE
+                vpath DEFAULT
+                prompt {Output NDF containing all-sky tile indices}
+                default !
+                helpkey *
+            }
+
+            parameter create {
+                position 3
+                type _LOGICAL
+                access READ
+                vpath DEFAULT
+                ppath DEFAULT
+                prompt {Create tile NDF if it does not already exist?}
+                default FALSE
+                helpkey *
+            }
+
+            parameter deccen {
+                type _DOUBLE
+                access WRITE
+                vpath DEFAULT
+                default 0
+                helpkey *
+            }
+
+            parameter exists {
+                type _LOGICAL
+                access WRITE
+                vpath DEFAULT
+                default FALSE
+                helpkey *
+            }
+
+            parameter header {
+                position 5
+                type LITERAL
+                access READ
+                ppath CURRENT
+                vpath DEFAULT
+                prompt {File to receive a FITS header for the tile}
+                default !
+                helpkey *
+            }
+
+            parameter instrument {
+                position 2
+                type LITERAL
+                access READ
+                ppath DYNAMIC CURRENT DEFAULT
+                vpath DYNAMIC PROMPT
+                prompt {JCMT instrument}
+                default {SCUBA-2(450)}
+                helpkey *
+            }
+
+            parameter itile {
+                position 1
+                type _INTEGER
+                access READ
+                ppath CURRENT
+                prompt {Zero-based tile index}
+                helpkey *
+            }
+
+            parameter lbnd {
+                size *
+                type _INTEGER
+                access WRITE
+                vpath INTERNAL
+                helpkey *
+            }
+
+            parameter local {
+                type _LOGICAL
+                access READ
+                vpath DEFAULT
+                ppath CURRENT DEFAULT
+                prompt {Put the reference point at the centre of the tile?}
+                default FALSE
+                helpkey *
+            }
+
+            parameter maxtile {
+                type _INTEGER
+                access WRITE
+                vpath DEFAULT
+                default 0
+                helpkey *
+            }
+
+            parameter racen {
+                type _DOUBLE
+                access WRITE
+                vpath DEFAULT
+                default 0
+                helpkey *
+            }
+
+            parameter region {
+                position 4
+                type LITERAL
+                access READ
+                ppath CURRENT
+                vpath DEFAULT
+                prompt {File to receive an AST Region for the tile}
+                default !
+                helpkey *
+            }
+
+            parameter size {
+                type _DOUBLE
+                access WRITE
+                vpath DEFAULT
+                default 0
+                helpkey *
+            }
+
+            parameter target {
+                type LITERAL
+                access READ
+                vpath DEFAULT
+                ppath CURRENT
+                prompt {The target Region or NDF}
+                default !
+                helpkey *
+            }
+
+            parameter tilendf {
+                type LITERAL
+                access WRITE
+                vpath DEFAULT
+                default 0
+                helpkey *
+            }
+
+            parameter tlbnd {
+                size *
+                type _INTEGER
+                access WRITE
+                vpath INTERNAL
+                helpkey *
+            }
+
+            parameter tubnd {
+                size *
+                type _INTEGER
+                access WRITE
+                vpath INTERNAL
+                helpkey *
+            }
+
+            parameter ubnd {
+                size *
+                type _INTEGER
+                access WRITE
+                vpath INTERNAL
+                helpkey *
+            }
+
+        }
+
+        action jsatilelist {
+            helplib {$SMURF_HELP}
+
+            parameter in {
+                position 1
+                type NDF
+                access READ
+                vpath {PROMPT }
+                ppath GLOBAL CURRENT
+                association <-GLOBAL.DATA_ARRAY
+                prompt {Input Region or NDF}
+                helpkey *
+            }
+
+            parameter instrument {
+                position 2
+                type LITERAL
+                access READ
+                ppath DYNAMIC CURRENT DEFAULT
+                vpath DYNAMIC PROMPT
+                prompt {JCMT instrument}
+                default {SCUBA-2(850)}
+                helpkey *
+            }
+
+            parameter tiles {
+                size *
+                type _INTEGER
+                access WRITE
+                vpath INTERNAL
+                helpkey *
+            }
+        }
+
         action makecube {
 
             helplib {$SMURF_HELP}
@@ -5113,207 +5314,6 @@ package @PACKAGE@ {
                 helpkey *
             }
 
-        }
-
-        action tileinfo {
-            helplib {$SMURF_HELP}
-
-            parameter allsky {
-                type NDF
-                access WRITE
-                vpath DEFAULT
-                prompt {Output NDF containing all-sky tile indices}
-                default !
-                helpkey *
-            }
-
-            parameter create {
-                position 3
-                type _LOGICAL
-                access READ
-                vpath DEFAULT
-                ppath DEFAULT
-                prompt {Create tile NDF if it does not already exist?}
-                default FALSE
-                helpkey *
-            }
-
-            parameter deccen {
-                type _DOUBLE
-                access WRITE
-                vpath DEFAULT
-                default 0
-                helpkey *
-            }
-
-            parameter exists {
-                type _LOGICAL
-                access WRITE
-                vpath DEFAULT
-                default FALSE
-                helpkey *
-            }
-
-            parameter header {
-                position 5
-                type LITERAL
-                access READ
-                ppath CURRENT
-                vpath DEFAULT
-                prompt {File to receive a FITS header for the tile}
-                default !
-                helpkey *
-            }
-
-            parameter instrument {
-                position 2
-                type LITERAL
-                access READ
-                ppath DYNAMIC CURRENT DEFAULT
-                vpath DYNAMIC PROMPT
-                prompt {JCMT instrument}
-                default {SCUBA-2(450)}
-                helpkey *
-            }
-
-            parameter itile {
-                position 1
-                type _INTEGER
-                access READ
-                ppath CURRENT
-                prompt {Zero-based tile index}
-                helpkey *
-            }
-
-            parameter lbnd {
-                size *
-                type _INTEGER
-                access WRITE
-                vpath INTERNAL
-                helpkey *
-            }
-
-            parameter local {
-                type _LOGICAL
-                access READ
-                vpath DEFAULT
-                ppath CURRENT DEFAULT
-                prompt {Put the reference point at the centre of the tile?}
-                default FALSE
-                helpkey *
-            }
-
-            parameter maxtile {
-                type _INTEGER
-                access WRITE
-                vpath DEFAULT
-                default 0
-                helpkey *
-            }
-
-            parameter racen {
-                type _DOUBLE
-                access WRITE
-                vpath DEFAULT
-                default 0
-                helpkey *
-            }
-
-            parameter region {
-                position 4
-                type LITERAL
-                access READ
-                ppath CURRENT
-                vpath DEFAULT
-                prompt {File to receive an AST Region for the tile}
-                default !
-                helpkey *
-            }
-
-            parameter size {
-                type _DOUBLE
-                access WRITE
-                vpath DEFAULT
-                default 0
-                helpkey *
-            }
-
-            parameter target {
-                type LITERAL
-                access READ
-                vpath DEFAULT
-                ppath CURRENT
-                prompt {The target Region or NDF}
-                default !
-                helpkey *
-            }
-
-            parameter tilendf {
-                type LITERAL
-                access WRITE
-                vpath DEFAULT
-                default 0
-                helpkey *
-            }
-
-            parameter tlbnd {
-                size *
-                type _INTEGER
-                access WRITE
-                vpath INTERNAL
-                helpkey *
-            }
-
-            parameter tubnd {
-                size *
-                type _INTEGER
-                access WRITE
-                vpath INTERNAL
-                helpkey *
-            }
-
-            parameter ubnd {
-                size *
-                type _INTEGER
-                access WRITE
-                vpath INTERNAL
-                helpkey *
-            }
-
-        }
-
-        action tilelist {
-            helplib {$SMURF_HELP}
-
-            parameter in {
-                position 1
-                type NDF
-                access READ
-                vpath {PROMPT }
-                ppath GLOBAL CURRENT
-                association <-GLOBAL.DATA_ARRAY
-                prompt {Input Region or NDF}
-                helpkey *
-            }
-
-            parameter instrument {
-                position 2
-                type LITERAL
-                access READ
-                ppath DYNAMIC CURRENT DEFAULT
-                vpath DYNAMIC PROMPT
-                prompt {JCMT instrument}
-                default {SCUBA-2(850)}
-                helpkey *
-            }
-
-            parameter tiles {
-                size *
-                type _INTEGER
-                access WRITE
-                vpath INTERNAL
-                helpkey *
-            }
         }
 
         action timesort {
