convert: Replace use of COF_ routines by equivalent CVG_ routines

--- a/applications/convert/libcof/Makefile.am
+++ b/applications/convert/libcof/Makefile.am
@@ -10,7 +10,7 @@ F_ROUTINES = \
  cof_atypc.f cof_bn2ht.f cof_bp2ht.f cof_camaa.f cof_camax.f cof_chisr.f \
  cof_chkp.f cof_chkxt.f cof_cophd.f cof_dateh.f cof_doscl.f cof_dstyp.f \
  cof_exdim.f cof_extab.f cof_extnf.f cof_extxt.f cof_f2ndf.f cof_fd2ht.f \
- cof_fhist.f cof_fioer.f cof_frmt.f cof_ft2ne.f cof_ftopr.f cof_gxtnm.f \
+ cof_fhist.f cof_frmt.f cof_ft2ne.f cof_ftopr.f cof_gxtnm.f \
  cof_h2bin.f cof_halog.f cof_hdate.f cof_hdlog.f cof_hecho.f cof_ht2bn.f \
  cof_ines.f cof_iswcs.f cof_iuemh.f cof_iuemx.f cof_iueq.f cof_iuesi.f \
  cof_lws1.f cof_lws2.f cof_lwsan.f cof_mandh.f cof_mrghd.f cof_ndf2f.f \
@@ -21,7 +21,7 @@ F_ROUTINES = \
  cof_wcsax.f cof_wcsdf.f cof_wcsex.f cof_wcsim.f cof_wcsut.f cof_mghdr.f \
  cof_getfc.f cof_getyp.f cof_stscl.f cof_smurf.f cof_nex2f.f cof_pcadc.f \
  cof_wprov.f cof_fi2ne.f cof_wstr.f cof_smfim.f cof_genam.f cof_wenam.f \
- cof_bt2ft.f  cof_ft2bt.f cof_tbsrc.f cof_hd2fc.f cof_fc2hd.f
+ cof_tbsrc.f
 
 GEN_ROUTINES = $(DIRW_GEN_ROUTINES) $(CDILR_GEN_ROUTINES)
 
