Update build dependencies (for cvg)
Add dependencies on cvg to convert and cupid.

--- a/Makefile.dependencies
+++ b/Makefile.dependencies
@@ -403,6 +403,7 @@ $(MANIFESTS)/convert: \
 		$(MANIFESTS)/cfitsio \
 		$(MANIFESTS)/chr \
 		$(MANIFESTS)/cnf \
+		$(MANIFESTS)/cvg \
 		$(MANIFESTS)/ems \
 		$(MANIFESTS)/figaro \
 		$(MANIFESTS)/fio \
@@ -480,6 +481,7 @@ $(MANIFESTS)/cupid: \
 		$(MANIFESTS)/chr \
 		$(MANIFESTS)/cnf \
 		$(MANIFESTS)/ctg \
+		$(MANIFESTS)/cvg \
 		$(MANIFESTS)/ems \
 		$(MANIFESTS)/fio \
 		$(MANIFESTS)/generic \
