cupid: Put NDF FITS keyword, history and provenance in primary HDU
They used to go in the binary table extension, but now go in the primary
HDU since they refer to the whole file rather than a specific extension.

--- a/applications/cupid/configure.ac
+++ b/applications/cupid/configure.ac
@@ -32,10 +32,10 @@ STAR_MONOLITHS
 STAR_MESSGEN( [ cupid_err.msg ] )
 
 dnl CUPID source files depend on include files from the following components
-STAR_DECLARE_DEPENDENCIES([build], [mers cnf cvg ifd irq ndf sae pda thr])
+STAR_DECLARE_DEPENDENCIES([build], [mers atl cnf cvg ifd irq ndf sae pda thr])
 
 dnl The CUPID link script links against the following components
-STAR_DECLARE_DEPENDENCIES([build], [kaplibs ast shl thr], [link])
+STAR_DECLARE_DEPENDENCIES([build], [atl kaplibs ast shl thr], [link])
 
 dnl Other dependencies
 STAR_DECLARE_DEPENDENCIES(sourceset, sst)
