smurf: New command to check agreement of tcs_az_ac1/2 and tcs_tr_ac1/2
New command called "checkcoords" added to compare corresponding
tcs_az_ac1/2 and tcs_tr_ac1/2 values.

--- a/applications/smurf/libsmurf/Makefile.am
+++ b/applications/smurf/libsmurf/Makefile.am
@@ -11,6 +11,7 @@ smurf_calcflat.c \
 smurf_calcnoise.c \
 smurf_calcqu.c \
 smurf_calcresp.c \
+smurf_checkcoords.c \
 smurf_copyflat.c \
 smurf_dreamsolve.c \
 smurf_dreamweights.c \
