smurf: new makecube parameter to request error if receppos/fplanexy disagree
Parameter is called POSERRFATAL

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -3197,6 +3197,14 @@ package @PACKAGE@ {
                 helpkey *
             }
 
+            parameter poserrfatal {
+                type _LOGICAL
+                vpath DEFAULT
+                ppath DEFAULT
+                prompt {Report error if RECEPPOS and FPLANEX/Y disagree?}
+                default FALSE
+                helpkey *
+            }
             parameter ref {
                 type NDF
                 access READ
