buildsupport: remove more traces of restFP support
Note that we have linker magic support in automake as well, that claims generality so is left in place for now

--- a/applications/startcl/Makefile.am
+++ b/applications/startcl/Makefile.am
@@ -72,10 +72,9 @@ libtkGwm_la_SOURCES = $(GWM_ROUTINES)
 libtkGwm_la_LIBADD = -ljpeg
 
 atclsh_SOURCES = tclAppInit.c $(NBS_ROUTINES)
-#  Note C_FC_FCLINK_MAGIC needed under OS X to work around restFP.
 atclsh_LDADD = libtclAdam.la `nbs_link` `ams_link_adam` `ems_link_adam` \
 			`cnfrtl_link` \
-      @TCL_LD_SEARCH_FLAGS@ @TCL_LIBS@ @FCLIBS@ @C_FC_FCLINK_MAGIC@
+      @TCL_LD_SEARCH_FLAGS@ @TCL_LIBS@ @FCLIBS@
 
 awish_SOURCES = tkAppInit.c $(NBS_ROUTINES)
 awish_LDADD = libtclAdam.la libtkGwm.la `nbs_link` `chr_link_adam` \
