gaia: remove magic from generated files

--- a/applications/gaia/gaia/Makefile.in
+++ b/applications/gaia/gaia/Makefile.in
@@ -184,8 +184,7 @@ CFLAGS		= @CFLAGS@
 CXXFLAGS        = @CXXFLAGS@
 FC              = @FC@
 FCFLAGS         = @FCFLAGS@ @SHLIB_CFLAGS@
-FCLIBS          = @FCLIBS@ $(C_FC_FCLINK_MAGIC)
-C_FC_FCLINK_MAGIC = @C_FC_FCLINK_MAGIC@
+FCLIBS          = @FCLIBS@
 STAR_FCFLAGS    = @STAR_FCFLAGS@
 FGENERIC        = @FGENERIC@
 COMPILE		= $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
