smurf: new command "jsajoin" to combine JSA tiles into a TAN-projected NDF
The command is implemented in a python script at the moment. The
effectiveness of the resampling may require more checking.

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -5722,6 +5722,10 @@ package @PACKAGE@ {
         obey {python $SMURF_DIR/tilecutout.py}
     }
 
+    command jsajoin {
+        obey {python $SMURF_DIR/jsajoin.py}
+    }
+
     icl {defhelp @PACKAGE@ $@PACKAGE_UPCASE@_HELP 0}
 
     display {
