--- a/applications/smurf/Makefile.am
+++ b/applications/smurf/Makefile.am
@@ -186,7 +186,8 @@ scripts/distortion scripts/showdistortion scripts/tobeam scripts/print_index \
 scripts/pol2cat.py scripts/pol2stack.py scripts/starutil.py scripts/skyloop.py \
 scripts/cbas scripts/bolcoords scripts/matched-filter scripts/smas scripts/canfar_scuba2_map.sh \
 scripts/sc2tsnoise scripts/canfar_sc2noise scripts/configmeld.py scripts/pol2catb.py \
-scripts/fts2gaia.py scripts/tilepaste.py scripts/tilecutout.py scripts/smurfutil.py
+scripts/fts2gaia.py scripts/tilepaste.py scripts/tilecutout.py scripts/smurfutil.py \
+scripts/jsajoin.py
 
 # IFL files
 IFL_FILES = $(smurf_mon_TASKS:=.ifl) smurf_mon.ifl
