figaro: Remove find_file as it is not used
find_file does not work on 64bit but was also not used in Figaro.
Remove it. If the functionality is needed use ONE_FIND_FILE instead.
The commented out code that used find_file has been removed.

--- a/applications/figaro/unix/Makefile.am
+++ b/applications/figaro/unix/Makefile.am
@@ -2,9 +2,7 @@
 
 noinst_LTLIBRARIES = libunix.la
 
-libunix_la_SOURCES = $(C_ROUTINES) $(F_ROUTINES) 
-
-C_ROUTINES = find_file.c
+libunix_la_SOURCES = $(F_ROUTINES) 
 
 F_ROUTINES = \
 check_fits.f cnv_fmtcnv.f dummy.f get_symbol.f print_file.f
