figaro: Use PSX_GETCWD and remove GEN_GETCWD
GEN_GETCWD indicated that it was hoping that PSX_GETCWD would
arrive some time in 1993. Interestingly the change log
for one of the DSA routines indicates that it did exist around
that time and was reverted. This is odd because the PSX in the
repository did not get PSX_GETCWD until commit
415ea5890df8dff831611f36836597580d01fd8e

GEN_GETCWD had compiler errors because it was using a deprecated
BSD API with getwd(). Seemed simpler to replace it with PSX.

--- a/applications/figaro/gen/Makefile.am
+++ b/applications/figaro/gen/Makefile.am
@@ -8,7 +8,7 @@ lib_LTLIBRARIES = libfiggen.la
 libfiggen_la_SOURCES = $(C_ROUTINES) $(F_ROUTINES) $(FPP_ROUTINES)
 
 C_ROUTINES = \
-gen_getcwd.c gen_qfisort.c gen_qfmed.c gen_qfsort.c gen_rename.c
+gen_qfisort.c gen_qfmed.c gen_qfsort.c gen_rename.c
 
 F_ROUTINES = \
 gen_addad.f gen_addaf.f gen_addafe.f gen_addcaf.f gen_addcafe.f \
