kappa: Add option for SETQUAL to copy quality info from a template NDF
See new parameter LIKE

--- a/applications/kappa/kappa.ifd.in
+++ b/applications/kappa/kappa.ifd.in
@@ -2216,6 +2216,16 @@ package kappa {
             helpkey *
          }
 
+         parameter like {
+            type NDF
+            access READ
+            vpath DEFAULT
+            ppath CURRENT DEFAULT
+            default !
+            prompt {NDF from which quality information should be copied}
+            helpkey *
+         }
+
          parameter list {
             type LITERAL
             access READ
