--- a/applications/coco/configure.ac
+++ b/applications/coco/configure.ac
@@ -2,10 +2,10 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
  
 dnl    Initialisation: package name and version number
-AC_INIT(coco, 2.2-8, starlink@jiscmail.ac.uk)
+AC_INIT([coco],[2.2-8],[starlink@jiscmail.ac.uk])
  
 dnl    Require autoconf-2.50 at least
-AC_PREREQ(2.50)
+AC_PREREQ([2.69])
 AM_INIT_AUTOMAKE(1.8.2-starlink)
  
 dnl    Sanity-check: name a file in the source directory -- if this
@@ -20,7 +20,7 @@ AC_PROG_FC
 AC_PROG_FPP
 
 dnl    Use libtool for linking since it will try to use the -rpath option
-AC_PROG_LIBTOOL
+LT_INIT
 
 AC_FC_OPEN_SPECIFIERS(readonly)
 AC_FC_OPEN_SPECIFIERS(action='read')
