--- a/applications/esp/configure.ac
+++ b/applications/esp/configure.ac
@@ -1,9 +1,9 @@
 dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
 
-AC_INIT(esp, 0.11-4, starlink@jiscmail.ac.uk)
+AC_INIT([esp],[0.11-4],[starlink@jiscmail.ac.uk])
 
-AC_PREREQ(2.50)
+AC_PREREQ([2.69])
 AM_INIT_AUTOMAKE(1.8.2-starlink)
 
 AC_CONFIG_SRCDIR([ELP_PAR])
