--- a/applications/extractor/configure.ac
+++ b/applications/extractor/configure.ac
@@ -2,10 +2,10 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
 
 dnl    Initialisation: package name and version number
-AC_INIT(extractor, 2.5-1, starlink@jiscmail.ac.uk)
+AC_INIT([extractor],[2.5-1],[starlink@jiscmail.ac.uk])
 
 dnl    Require autoconf-2.50 at least
-AC_PREREQ(2.50)
+AC_PREREQ([2.69])
 dnl    Require Starlink automake
 AM_INIT_AUTOMAKE([1.8.2-starlink subdir-objects])
 
@@ -36,7 +36,7 @@ dnl    automake to assume it's allowed to play there, too.
 dnl    Find required versions of the programs we need for configuration
 AC_PROG_CC
 AC_PROG_FC
-AC_PROG_LIBTOOL
+LT_INIT
 
 dnl    Declare the build and use dependencies for this package
 STAR_DECLARE_DEPENDENCIES(build, [ast ndg sae], [link])
