--- a/applications/pamela/configure.ac
+++ b/applications/pamela/configure.ac
@@ -2,10 +2,10 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
 
 dnl    Initialisation: package name and version number
-AC_INIT(pamela, 1.0.6, t.r.marsh@warwick.ac.uk)
+AC_INIT([pamela],[1.0.6],[t.r.marsh@warwick.ac.uk])
 
 dnl    Require autoconf-2.50 at least
-AC_PREREQ(2.50)
+AC_PREREQ([2.69])
 AM_INIT_AUTOMAKE(1.8.2-starlink)
 
 dnl    Sanity-check: name a file in the source directory -- if this
@@ -16,7 +16,7 @@ STAR_DEFAULTS(per-package-dirs)
 
 dnl    Find required versions of the programs we need for configuration
 AC_PROG_FC
-AC_PROG_LIBTOOL
+LT_INIT
 
 STAR_MONOLITHS
 
