--- a/applications/spt/configure.ac
+++ b/applications/spt/configure.ac
@@ -2,10 +2,10 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
  
 dnl    Initialisation: package name and version number
-AC_INIT(spt, 1.3-1, starlink@jiscmail.ac.uk)
+AC_INIT([spt],[1.3-1],[starlink@jiscmail.ac.uk])
  
 dnl    Require autoconf-2.50 at least
-AC_PREREQ(2.50)
+AC_PREREQ([2.69])
 dnl    Require Starlink automake at least
 AM_INIT_AUTOMAKE(1.8.2-starlink)
 
@@ -18,7 +18,7 @@ STAR_DEFAULTS
  
 dnl    Find required versions of the programs we need for configuration
 AC_PROG_CC
-AC_PROG_LIBTOOL
+LT_INIT
 
 dnl    Documentation is in the parent directory
 STAR_LATEX_DOCUMENTATION(sun111)
