--- a/libraries/ems/configure.ac
+++ b/libraries/ems/configure.ac
@@ -2,10 +2,10 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
 
 dnl    Initialisation: package name and version number
-AC_INIT(ems, 2.4-0, starlink@jiscmail.ac.uk)
+AC_INIT([ems],[2.4-0],[starlink@jiscmail.ac.uk])
 
 dnl    Require autoconf-2.50 at least
-AC_PREREQ(2.50)
+AC_PREREQ([2.69])
 dnl    Require Starlink automake
 AM_INIT_AUTOMAKE(1.8.2-starlink)
 
@@ -20,7 +20,7 @@ dnl    Find required versions of the programs we need for configuration
 AC_PROG_CC
 AC_C_CONST
 AC_HEADER_STDC
-AC_PROG_LIBTOOL
+LT_INIT
 
 dnl    If --with-pic=no is set we should honour that.
 AM_CONDITIONAL(NOPIC, test x$pic_mode = xno)
