--- a/libraries/fio/configure.ac
+++ b/libraries/fio/configure.ac
@@ -2,10 +2,10 @@ dnl  Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
 
 dnl   Initialisation: package name and version number
-AC_INIT(fio, 1.5-4, starlink@jiscmail.ac.uk)
+AC_INIT([fio],[1.5-4],[starlink@jiscmail.ac.uk])
 
 dnl   Require autoconf-2.50 at least
-AC_PREREQ(2.50)
+AC_PREREQ([2.69])
 dnl   Require Starlink automake at least
 AM_INIT_AUTOMAKE(1.8.2-starlink)
 
@@ -19,7 +19,7 @@ STAR_DEFAULTS
 AC_PROG_CC
 AC_PROG_FC
 AC_PROG_FPP
-AC_PROG_LIBTOOL
+LT_INIT
 
 AC_CHECK_HEADERS(errno.h)
 AC_CHECK_HEADERS(time.h)
