perlmods: Add UKIRT::Archive module
This module contains the "ukirtwrapdr" script and associated
library file.  This is intended to be an equivalent of
"jsawrapdr" for the UKIRT archive at CADC.  This commit
also updates the JSA module to the (refactored) version
required by UKIRT::Archive.

Note that this version only includes dummy expressions
for UKIRT data product filenames.

--- a/.gitmodules
+++ b/.gitmodules
@@ -157,3 +157,6 @@
 [submodule "thirdparty/perlsys/perlmods/perl-Astro-ITC-SCUBA2"]
 	path = thirdparty/perlsys/perlmods/perl-Astro-ITC-SCUBA2
 	url = git://github.com/jac-h/perl-Astro-ITC-SCUBA2.git
+[submodule "thirdparty/perlsys/perlmods/perl-UKIRT-Archive"]
+	path = thirdparty/perlsys/perlmods/perl-UKIRT-Archive
+	url = git://github.com/jac-h/perl-UKIRT-Archive.git
