atools: Allow astoutline to create poly in current NDF frame
New parameter CURRENT can be set TRUE to cause the polygon returned
by astOutline to be mapped into the current Frame of the NDF (using
astMapRegion). Defaults to FALSE in order to retain a one-to-one
correspondance between the default behaviour of the atools "astoutline"
command and the AST "astOutline" function.

--- a/applications/atools/atools.ifd.in
+++ b/applications/atools/atools.ifd.in
@@ -1614,6 +1614,15 @@ iraf! {
             helpkey *
          }
 
+         parameter current {
+            type _LOGICAL
+            prompt {Map the Polygon into current Frame of the NDF?}
+            ppath CURRENT DEFAULT
+            vpath DEFAULT
+            default FALSE
+            helpkey *
+         }
+
          parameter inside {
             position 6
             type _INTEGER
