atools: astoutline now reports the number of vertices in the returned polygon
and writes it to output parameter NVERT

--- a/applications/atools/atools.ifd.in
+++ b/applications/atools/atools.ifd.in
@@ -1651,6 +1651,14 @@ iraf! {
             helpkey *
          }
 
+         parameter nvert {
+            type _INTEGER
+            access WRITE
+            vpath DEFAULT
+            default 0
+            helpkey *
+          }
+
          parameter oper {
             position 2
             type LITERAL
