smurf: Rename jsasplit as jsadicer
This is so that I can add a new command called jsasplit that does the
reprojection as well as the dicing.

--- a/applications/smurf/libsmurf/Makefile.am
+++ b/applications/smurf/libsmurf/Makefile.am
@@ -37,7 +37,7 @@ smurf_fts2_transcorr.c \
 smurf_gsd2acsis.c \
 smurf_gsdshow.c \
 smurf_impaztec.c \
-smurf_jsasplit.c \
+smurf_jsadicer.c \
 smurf_jsatileinfo.c \
 smurf_jsatilelist.c \
 smurf_makecube.c \
