smurf: Add new command jsasplit
A python script that resamples an NDF onto the JSA all sky pixel grid
and then dices it up into tiles.

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -5743,6 +5743,10 @@ package @PACKAGE@ {
         obey {python $SMURF_DIR/jsajoin.py}
     }
 
+    command jsasplit {
+        obey {python $SMURF_DIR/jsasplit.py}
+    }
+
     icl {defhelp @PACKAGE@ $@PACKAGE_UPCASE@_HELP 0}
 
     display {
