atools: Scalar output parameters should have vpath=default
vpath=internal is for vector output parameters

--- a/applications/atools/atools.ifd.in
+++ b/applications/atools/atools.ifd.in
@@ -3067,13 +3067,15 @@ iraf! {
          parameter xval {
             type _DOUBLE
             access WRITE
-            vpath INTERNAL
+            vpath DEFAULT
+            default 0.0
             helpkey *
           }
          parameter yval {
             type _DOUBLE
             access WRITE
-            vpath INTERNAL
+            vpath DEFAULT
+            default 0.0
             helpkey *
           }
       }
